# conda-suitesparse

./: .gitignore  CMakeLists.txt  SuiteSparseConfigForInstall.cmake  UseSuiteSparseForInstall.cmake.in
SuiteSparse/: CMakeLists.txt
SuiteSparse/CHOLMOD/: CMakeLists.txt
SuiteSparse/CHOLMOD/Partition/: cholmod_metis.c2
SuiteSparse/CHOLMOD/Tcov/: Makefile
SuiteSparse/SPQR/: CMakeLists.txt
SuiteSparse/SuiteSparse_config/: CMakeLists.txt  SuiteSparse_config.mk
conda/: bld.bat  build.sh  meta.yaml  metis5_idx.patch
conda_mkl/: bld.bat  build.sh  meta.yaml  metis5_idx.patch
metis/: CMakeLists.txt
